--- a/style.css
+++ b/style.css
@@ -3,3 +3,52 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
 }
+
+section {
+    margin-bottom: 110px;
+}
+
+.batton {
+    padding: 16px 12px;
+    background-color: #FF5959;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    font-family: 500;
+}
+
+/* banner part start */
+#banner {
+    background: url(./images/donation13.jpg);
+    padding: 200px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* background: linear-gradient(360deg, #121212 0%, rgba(18, 18, 18, 0) 100%); */
+}
+
+.banner_text {
+    text-align: center;
+    color: #fff;
+}
+
+.banner_text h1 {
+    font-size: 65px;
+    font-weight: 700;
+    text-shadow: 2px 2px 8px #000000;
+}
+
+.banner_text p {
+    margin-top: 15px;
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    text-shadow: 2px 2px 8px #000000;
+}
+
+/* banner part end */
