--- a/style.css
+++ b/style.css
@@ -52,3 +52,58 @@ section {
 }
 
 /* banner part end */
+/* Donate_Today part start */
+.head_text {
+    text-align: center;
+}
+
+.head_text h2 {
+    font-weight: 700;
+    font-size: 45px;
+}
+
+.head_text p {
+    color: #707070;
+    margin-top: 15px;
+}
+
+.doneted_main {
+    margin: 80px 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.donet_item {
+    padding: 40px 20px;
+    background: #FAFAFA;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.chang {
+    background-color: pink;
+    border: 2px solid rgb(163, 18, 43);
+    color: #FF5959;
+}
+
+.donet_item h2 {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.doner_inner {
+    text-align: center;
+}
+
+.doner_inner p {
+    color: #707070;
+    font-family: 400;
+}
+
+.doner_inner hr {
+    width: 650px;
+    margin: 10px auto 36px;
+    color: #70707082;
+}
+
+/* Donate_Today part end */
