--- a/style.css
+++ b/style.css
@@ -107,3 +107,38 @@ section {
 }
 
 /* Donate_Today part end */
+/* Donate_plan part start */
+.plan_main {
+    margin: 50px 60px 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.plan_item {
+    width: 27%;
+    padding: 40px 23px;
+
+}
+
+.plan_item h3 {
+    margin: 20px 0;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.plan_back1 {
+    background: rgba(79, 157, 166, 0.1);
+    border-radius: 5px;
+}
+
+.plan_back2 {
+    background: rgba(255, 89, 89, 0.1);
+    border-radius: 5px;
+}
+
+.plan_back3 {
+    background: #FFF4D6;
+    border-radius: 5px;
+}
+
+/* Donate_plan part end */
