--- a/style.css
+++ b/style.css
@@ -180,6 +180,18 @@ section {
 }
 
 /* contrebute part end */
+/* team part start */
+.team_main {
+    display: flex;
+    justify-content: space-around;
+    margin: 60px 40px 0;
+}
+
+.team_item {
+    text-align: center;
+}
+
+/* team part end */
 
 /* update part start */
 .mail_back {
