--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ section {
 /* banner part start */
 #banner {
     background: url(./images/donation13.jpg);
-    padding: 200px;
+    padding: 200px 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -34,6 +34,7 @@ section {
 .banner_text {
     text-align: center;
     color: #fff;
+
 }
 
 .banner_text h1 {
@@ -45,6 +46,7 @@ section {
 .banner_text p {
     margin-top: 15px;
     margin-bottom: 30px;
+    padding: 0 200px;
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
@@ -183,7 +185,7 @@ section {
 /* team part start */
 .team_main {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin: 60px 40px 0;
 }
 
